@@ -50,6 +50,26 @@ check_readonly_system()
 	}
 }
 
+check_source()
+{
+	local bad=0
+	echo \* checking source files
+        case $SYSTEM in
+		systemd)
+			[ -f "$EXEDIR/init.d/systemd/zapret.service" ] || bad=1
+			;;
+		openrc)
+			[ -f "$EXEDIR/init.d/openrc/zapret" ] || bad=1
+			;;
+		*)
+	esac
+	[ "$bad" = 1 ] && {
+		echo 'some critical files are missing'
+		echo 'are you sure you are not using embedded release ? you need full version for traditional linux'
+		exitp 5
+	}
+}
+
 check_bins()
 {
 	echo \* checking executables
@@ -883,6 +903,7 @@ umask 0022
 fix_sbin_path
 fsleep_setup
 check_system
+check_source
 
 [ "$SYSTEM" = "macos" ] && . "$EXEDIR/init.d/macos/functions"
 
