@@ -506,3 +506,4 @@ blockcheck: report test function and domain every test
 v71.1
 
 nfqws,tpws: much faster ipset implementation. move from hash to avl tree
+install_easy: stop if running embedded release on traditional linux system (some files missing)
